Fixed filling time series interval gaps. Changed display property of toolbar to make it invisible while loading. Added interpolation control to injection and production time series. Added title to the SOR time series.

--- a/app/styles/modules/mapToolbar/_map-toolbar.scss
+++ b/app/styles/modules/mapToolbar/_map-toolbar.scss
@@ -16,7 +16,8 @@ Map Toolbar
 	@extend %border-box;
 	background: darken($body-background, 5);
 	top: ($margin * 3);
-	display: inline;
+	//display: inline;
+	display: none;
 	padding: ($padding-small / 10) ($padding-small / 10) ($padding-small / 10) ($padding-small / 10);
 	button{
 		padding: 0.5em 0.5em 0.5em 0.5em;
